--- a/tfl_bus_monitor/config/busstop_config.ini
+++ b/tfl_bus_monitor/config/busstop_config.ini
@@ -1,4 +1,4 @@
 [busstop]
-#Newington Green, Clissold Crescent
-stopid = 490005432S2,490015396S
-num_busses=10,10
+stopid = 490005432S2,490015396S,910GCNNB,940GZZLUAGL
+num_services = 10,10,10,10
+
